--- a/src/server/src/redirect.html
+++ b/src/server/src/redirect.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <p>Redirecting pls w8!</p>
+    <sub>if not redirected automatically go back to the root path of the page</sub>
 </body>
 
 <script>
