--- a/src/server/src/index.html
+++ b/src/server/src/index.html
@@ -14,7 +14,7 @@
     <button onclick="redirect('r')">right</button>
     <button onclick="redirect('l')">left</button>
 
-    <img src="/image.jpg" alt="image from webcam" style="display: flex; margin-left: auto; margin-right: auto; justify-content: center; width:50%">
+    <img src="/frame_0005.jpg" alt="image from webcam" style="display: flex; margin-left: auto; margin-right: auto; justify-content: center; width:50%">
 </body>
 
 <script>
