--- a/src/server/src/index.html
+++ b/src/server/src/index.html
@@ -10,9 +10,14 @@
     <h4>these buttons control a servo motor turning a 2€ webcam <br>
         I removed the infrared filter from.
     </h4>
+    <sub>
+        PS: there is an IR LED hidden in the setup somewhere<br> this effectively turns the cam into a night vision camera <br>because the enclosure is otherwise mostly shielded from light
+    </sub>
 
-    <button onclick="redirect('r')">right</button>
-    <button onclick="redirect('l')">left</button>
+    <br>
+
+    <button onclick="redirect('r')">RIGHT</button>
+    <button onclick="redirect('l')">LEFT</button>
 
     <img src="/frame_0005.jpg" alt="image from webcam" style="display: flex; margin-left: auto; margin-right: auto; justify-content: center; width:50%">
 </body>
@@ -25,19 +30,30 @@
 
 
 <style>
-    h1, h4 {
+    h1, h4, sub {
         display: flex;
         justify-content: center;
+        font-family:  Consolas, Monaco, 'Lucida Console', Courier New, monospace;
     }
     button {
         margin-left: 20%;
         padding-left: 10%;
         padding-right: 10%;
         padding-top: 10%;
+        font-size: 200%;
 
         display: inline-flex;
         justify-content: center;
 
+        background: #034828;
+        border:3px solid #007b7b;
+
+        font-family:  Consolas, Monaco, 'Lucida Console', Courier New, monospace;
+        font-stretch: expanded;
+        color: #f0f0f0;
+    }
+    body {
+        background: #009a9a;
     }
 </style>
 </html>
